alignment correction & value set

--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -6,11 +6,11 @@ body {
 }
 
 .App {
-  display: flex;
+  display:flex;
   align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
+  justify-content:center;
+  width: 90vw;
+  height: 120vh;
   flex-direction: column;
 }
 
