--- a/chat-app/src/styles/Chat.css
+++ b/chat-app/src/styles/Chat.css
@@ -102,7 +102,7 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  width: 80%;
+  width: 109.5%;
   margin: 20px auto;
   border-radius: 10px;
   overflow: hidden;
@@ -135,7 +135,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  height: 80vh;
+  height: 95vh;
   overflow-y: auto;
   padding: 15px;
   margin-top: 5px;
@@ -147,7 +147,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   margin-left: 20px;
   padding: 10px;
   border-radius: 10px;
@@ -202,26 +202,39 @@
 
 .uploaded-file {
   max-width: 100%;
-  max-height: 300px;
+  max-height: 270px;
   border-radius: 8px;
   object-fit: cover;
 }
 
 .new-message-form {
   display: flex;
-  flex-direction: column; 
-  align-items: flex-start; 
-  width: 100%;
+  align-items: center;
   padding: 10px;
-  background-color: #f4f4f8;
-  border-top: 1px solid #ccc;
+  gap: 10px;
+}
+
+.input-and-file-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.new-message-form {
+  display: flex;
+  flex-direction: column; /* Ensure elements stack vertically if needed */
+  padding: 10px;
+}
+
+.input-and-file-container {
+  display: flex;
+  align-items: center;
+  width: 100%; 
+}
 
 .new-message-input {
- 
-  width: 82%;
-  margin-bottom: 10px;
-  margin-top: 30px;
-  margin-left: 5%;
+  flex-grow: 1; 
+  min-width: 900px; 
+  margin-right: 20px;
   border-radius: 5px;
   padding: 10px;
   border: 1px solid #ccc;
@@ -230,24 +243,26 @@
   color: #333;
 }
 
-.hidden-file-input {
-  display: none;
-}
-
 .file-input-container {
-  width: 100%; 
+  flex: 0 0 auto; 
+  display: flex;
+  align-items: center;
 }
 
 .custom-file-upload {
-  display: inline-flex;
+  width: 100%;
   padding: 10px;
- margin-bottom:10px ;
- margin-left: 90%;
- width: 24px;
   border: 1px solid #ccc;
   border-radius: 5px;
   cursor: pointer;
   background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hidden-file-input {
+  display: none;
 }
 
 .custom-file-upload img {
@@ -266,8 +281,8 @@
 }
 
 .send-button {
-  width: 90%;
-  margin-left: 5%;
+  width: 100%;
+  
   border: none;
   outline: none;
   background: #3b5998;
@@ -277,7 +292,6 @@
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
- 
 }
 
 .send-button:hover {
@@ -290,14 +304,18 @@
   color: #333;
 }
 
+
 @media (max-width: 600px) {
   .new-message-form {
     padding: 10px;
   }
 
   .new-message-input{
-   flex:1;
-    width: 80%;
+    flex-grow: 1; 
+    min-width: 300px; 
+    margin-right:10px;
+    border-radius: 5px;
+    
   }
   .custom-file-upload{
     
@@ -314,5 +332,4 @@
   .send-button {
     padding: 8px 15px;
   }
-}
 }
